# ArknightsAutoMachine

./: .clang-format  .clang-tidy  .cmake-lint  .gitignore  CMakeLists.txt  COLLABORATION.md  INTERNAL_COLLABORATION.md  README.md  USER_AGREEMENT.md  main.py  pyproject.toml  requirements.txt  vcpkg.json  开发.md  项目结构.md
.github/: PROTOCOL_REVIEW_GUIDELINES.md  README.md
.github/ISSUE_TEMPLATE/: README.md
.github/workflows/: README.md  ci.yml  codeql.yml
.trae/rules/: aamrole.md
bridge/: README.md
bridge/python/aam_bridge/: README.md  __init__.py  device_cache.py  scrcpy_client.py
bridge/src/: README.md
cmake/: FindZeroMQ.cmake  README.md  compiler_flags.cmake
config/: user_settings.json
configs/: README.md
configs/ama/: README.md
configs/gui/: README.md
configs/inference/: README.md
core/: README.md
core/include/aam/: README.md
core/include/aam/core/: README.md  logger.hpp  memory_pool.hpp  timer.hpp
core/include/aam/l0/: README.md  capture_backend.hpp  frame_buffer.hpp
core/include/aam/l1/: README.md
core/include/aam/l2/: README.md
core/include/aam/l3/: README.md
core/include/aam/l4/: README.md
core/src/common/: README.md  logger.cpp  memory_pool.cpp  timer.cpp
core/src/l0_sensing/: README.md  capture_backend.cpp
core/src/l1_perception/: README.md
core/src/l1_perception/cuda_kernels/: README.md
core/src/l2_motor/: README.md
core/src/l2_motor/input_adapters/: README.md
core/src/l3_tactical/: README.md
core/src/l3_tactical/bytecode/: README.md
core/src/l4_state/: README.md
core/tests/: README.md
develop_plan/: BASE_FILES_STRUCTmd  README.md  ROADMAP-S.md  ROADMAP.md  main.md
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
gui/: README.md  run_qt.py
gui/abstract/: README.md  __init__.py
gui/qt/: README.md  requirements.txt
gui/qt/src/: __init__.py  mainwindows.py  scrcpy_client.py  screen_view.py
gui/web/: README.md
gui/wpf/: README.md
gui/wpf/AAM.Native/: README.md
gui/wpf/AAM.WPF/: README.md
inference/: README.md
inference/models/: README.md
inference/services/: README.md
inference/src/: __main__.py  cli.py
inference/src/data/: README.md  __init__.py  operator_matcher.py
inference/src/data/database/: __init__.py  manager.py  schema.py
inference/src/data/models/: __init__.py  base.py  enemy.py  item.py  operator.py  stage.py
inference/src/data/providers/: __init__.py  data_manager.py  github_provider.py  prts_provider.py
inference/src/map/: README.md  __init__.py  level_analyzer.py  map_visualizer.py
inference/src/vision/: README.md  __init__.py  enhanced_gui_matcher.py  game_state_detector.py  gui_matcher.py  squad_analyzer.py  squad_recognizer.py  text_locator.py
proto/: README.md  buf.yaml
proto/ama/: README.md  l0_frame.proto  l1_perception.proto  l2_action.proto  l3_tactical.proto  l4_state.proto
proto/common/: README.md  types.proto
proto/inference/: README.md  l5_strategy.proto
proto/services/: README.md  control_service.proto
scripts/: README.md
scripts/codegen/: protobuf_gen.py
scripts/setup/: install_clang.sh  install_deps_windows.ps1
src/AMA/L0/: __init__.py  bridge.py  hybrid_bridge.py  motor.py  scrcpy_sensor.py  sensor.py  windows_sensor.py
src/common/: __init__.py
src/common/adb/: __init__.py  client.py  utils.py
src/common/capture/: __init__.py  capture.py  wgc_capture.py  window_utils.py
src/gui/: __init__.py  app.py
src/gui/dialogs/: __init__.py  settings.py
src/gui/panels/: __init__.py  control.py  monitor.py  preview.py
src/tests/: test_L0.py
src/utils/: config.py
tests/: README.md
tools/: README.md
